<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android">

    <EditTextPreference
        android:capitalize="words"
        android:inputType="textCapWords"
        android:key="pref_name"
        android:maxLines="1"
        android:selectAllOnFocus="true"
        android:singleLine="true"
        android:title="@string/change_name"
        />
    <EditTextPreference
        android:capitalize="words"
        android:inputType="phone"
        android:key="pref_mobile"
        android:maxLines="1"
        android:selectAllOnFocus="true"
        android:singleLine="true"
        android:title="@string/change_mobile"
        android:maxLength="10"
        />

    <EditTextPreference
        android:id="@+id/location_preference"
        android:capitalize="words"
        android:defaultValue="@string/pref_default_location_value"
        android:inputType="textCapWords"
        android:key="pref_location_key"
        android:maxLines="1"
        android:selectAllOnFocus="true"
        android:singleLine="true"
        android:title="@string/change_city" />

</PreferenceScreen>
