<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:weightSum="1">

    <RelativeLayout
        android:id="@+id/current"
        android:layout_width="300dp"
        android:layout_height="220dp">

        <LinearLayout
            android:id="@+id/three_day"
            android:layout_width="300dp"
            android:layout_height="80dp"
            android:layout_alignParentBottom="true"
            android:layout_centerHorizontal="true"
            android:orientation="horizontal">

            <LinearLayout
                android:id="@+id/one"
                android:layout_width="100dp"
                android:layout_height="match_parent"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/day_one"
                    android:layout_width="match_parent"
                    android:layout_height="15dp"
                    android:gravity="center_vertical|center_horizontal"
                    android:text="--"
                    android:textColor="@color/textColorTertiary"
                    android:textSize="10sp"
                    android:textStyle="normal|bold" />

                <ImageView
                    android:id="@+id/icon_one"
                    android:layout_width="30dp"
                    android:layout_height="30dp"
                    android:layout_marginBottom="5dp"
                    android:layout_marginLeft="35dp"
                    android:layout_marginRight="35dp"
                    android:layout_marginTop="10dp"
                    app:srcCompat="@drawable/ic_weather" />

                <TextView
                    android:id="@+id/temp_one"
                    android:layout_width="match_parent"
                    android:layout_height="15dp"
                    android:gravity="center_vertical|center_horizontal"
                    android:text="-- | --"
                    android:textColor="@color/textColorTertiary"
                    android:textSize="10sp" />

            </LinearLayout>

            <LinearLayout
                android:id="@+id/two"
                android:layout_width="100dp"
                android:layout_height="match_parent"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/day_two"
                    android:layout_width="match_parent"
                    android:layout_height="15dp"
                    android:gravity="center_vertical|center_horizontal"
                    android:text="--"
                    android:textColor="@color/textColorTertiary"
                    android:textSize="10sp"
                    android:textStyle="normal|bold" />

                <ImageView
                    android:id="@+id/icon_two"
                    android:layout_width="30dp"
                    android:layout_height="30dp"
                    android:layout_marginBottom="5dp"
                    android:layout_marginLeft="35dp"
                    android:layout_marginRight="35dp"
                    android:layout_marginTop="10dp"
                    app:srcCompat="@drawable/ic_weather" />

                <TextView
                    android:id="@+id/temp_two"
                    android:layout_width="match_parent"
                    android:layout_height="15dp"
                    android:gravity="center_vertical|center_horizontal"
                    android:text="-- | --"
                    android:textColor="@color/textColorTertiary"
                    android:textSize="10sp" />
            </LinearLayout>

            <LinearLayout
                android:id="@+id/three"
                android:layout_width="100dp"
                android:layout_height="match_parent"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/day_three"
                    android:layout_width="match_parent"
                    android:layout_height="15dp"
                    android:gravity="center_vertical|center_horizontal"
                    android:text="--"
                    android:textColor="@color/textColorTertiary"
                    android:textSize="10sp"
                    android:textStyle="normal|bold" />

                <ImageView
                    android:id="@+id/icon_three"
                    android:layout_width="30dp"
                    android:layout_height="30dp"
                    android:layout_marginBottom="5dp"
                    android:layout_marginLeft="35dp"
                    android:layout_marginRight="35dp"
                    android:layout_marginTop="10dp"
                    app:srcCompat="@drawable/ic_weather" />

                <TextView
                    android:id="@+id/temp_three"
                    android:layout_width="match_parent"
                    android:layout_height="15dp"
                    android:gravity="center_vertical|center_horizontal"
                    android:text="-- | --"
                    android:textColor="@color/textColorTertiary"
                    android:textSize="10sp" />
            </LinearLayout>

        </LinearLayout>

        <ImageView
            android:id="@+id/icon"
            android:layout_width="60dp"
            android:layout_height="60dp"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true"
            android:layout_alignParentTop="true"
            android:layout_marginBottom="10dp"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp"
            android:layout_marginTop="20dp"
            app:srcCompat="@drawable/ic_weather" />

        <TextView
            android:id="@+id/feels_like"
            android:layout_width="70dp"
            android:layout_height="15dp"
            android:layout_above="@+id/today"
            android:layout_toEndOf="@+id/icon"
            android:layout_toRightOf="@+id/icon"
            android:gravity="center_vertical|center_horizontal"
            android:text="--"
            android:textColor="@color/textColorTertiary"
            android:textSize="10sp" />

        <TextView
            android:id="@+id/humidity"
            android:layout_width="70dp"
            android:layout_height="15dp"
            android:layout_above="@+id/narrative"
            android:layout_toEndOf="@+id/feels_like"
            android:layout_toRightOf="@+id/feels_like"
            android:gravity="center_vertical|center_horizontal"
            android:text="--"
            android:textColor="@color/textColorTertiary"
            android:textSize="10sp" />

        <TextView
            android:id="@+id/title_feels_like"
            android:layout_width="70dp"
            android:layout_height="15dp"
            android:layout_above="@+id/feels_like"
            android:layout_toEndOf="@+id/icon"
            android:layout_toRightOf="@+id/icon"
            android:gravity="center_vertical|center_horizontal"
            android:text="@string/feel"
            android:textColor="@color/textColorTertiary"
            android:textSize="10sp"
            android:textStyle="normal|bold" />

        <TextView
            android:id="@+id/title_humidity"
            android:layout_width="70dp"
            android:layout_height="15dp"
            android:layout_above="@+id/humidity"
            android:layout_toEndOf="@+id/feels_like"
            android:layout_toRightOf="@+id/feels_like"
            android:gravity="center_vertical|center_horizontal"
            android:text="@string/humid"
            android:textColor="@color/textColorTertiary"
            android:textSize="10sp"
            android:textStyle="normal|bold" />

        <TextView
            android:id="@+id/title_wind"
            android:layout_width="70dp"
            android:layout_height="15dp"
            android:layout_alignParentEnd="true"
            android:layout_alignParentRight="true"
            android:layout_alignTop="@+id/title_humidity"
            android:layout_marginRight="10dp"
            android:gravity="center_vertical|center_horizontal"
            android:text="@string/wind"
            android:textColor="@color/textColorTertiary"
            android:textSize="10sp"
            android:textStyle="normal|bold" />

        <TextView
            android:id="@+id/wind"
            android:layout_width="70dp"
            android:layout_height="15dp"
            android:layout_alignParentEnd="true"
            android:layout_alignParentRight="true"
            android:layout_below="@+id/title_humidity"
            android:layout_marginRight="10dp"
            android:gravity="center_vertical|center_horizontal"
            android:text="--"
            android:textColor="@color/textColorTertiary"
            android:textSize="10sp" />

        <TextView
            android:id="@+id/today"
            android:layout_width="80dp"
            android:layout_height="40dp"
            android:layout_above="@+id/three_day"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true"
            android:gravity="center_vertical|center_horizontal"
            android:text="@string/today"
            android:textColor="@color/textColorTertiary"
            android:textSize="12sp"
            android:textStyle="normal|bold" />

        <TextView
            android:id="@+id/narrative"
            android:layout_width="210dp"
            android:layout_height="40dp"
            android:layout_alignParentEnd="true"
            android:layout_alignParentRight="true"
            android:layout_below="@+id/feels_like"
            android:layout_marginRight="10dp"
            android:gravity="center_vertical"
            android:textColor="@color/textColorTertiary"
            android:textSize="10sp" />

        <TextView
            android:id="@+id/locality"
            android:layout_width="140dp"
            android:layout_height="25dp"
            android:layout_alignLeft="@+id/description"
            android:layout_alignStart="@+id/description"
            android:layout_alignTop="@+id/icon"
            android:gravity="center_vertical"
            android:text="@string/loc_unk"
            android:textColor="@color/textColorTertiary"
            android:textStyle="normal|bold" />

        <TextView
            android:id="@+id/temp"
            android:layout_width="60dp"
            android:layout_height="25dp"
            android:layout_alignTop="@+id/locality"
            android:layout_toEndOf="@+id/locality"
            android:layout_toRightOf="@+id/locality"
            android:gravity="center_horizontal"
            android:text="--"
            android:textColor="@color/textColorTertiary"
            android:textSize="22sp"
            android:textStyle="normal|bold" />

        <TextView
            android:id="@+id/description"
            android:layout_width="200dp"
            android:layout_height="25dp"
            android:layout_alignParentEnd="true"
            android:layout_alignParentRight="true"
            android:layout_below="@+id/locality"
            android:layout_marginRight="10dp"
            android:gravity="center_vertical"
            android:textColor="@color/textColorTertiary"
            android:textSize="9sp" />

    </RelativeLayout>
</LinearLayout>